tests/unit/default/syntax-error/112-add-i.e.t
---- IN ----
+I
---- OUT ----
---- ERR ----
syntax: expected <table> after `+I` instead of EOL at position 2 - at line 1
---- EXIT ----
1
